<resources>
    <string name="app_name">I-DO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="btn_lihatdetai">Lihat Detail</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="adiksi_rokok1">Sejak   :   2018</string>
    <string name="adiksi_alkohol1">Sejak   :   2020</string>3 bulan kedepan
    <string name="adiksi_rokok2">Target  :   Akhir tahun sudah \nsembuh</string>
    <string name="adiksi_alkohol2">Target  :   3 bulan kedepan</string>
    <string name="berita_text">
        Jakarta, CNN Indonesia -- Merokok bak adiksi yang sulit disetop. Zat adiktif bernama nikotin di dalamnya membikin banyak orang ketergantungan pada rokok. Alhasil, berhenti merokok jadi sesuatu yang musykil bagi sebagian orang. \n \n
        Di Indonesia, jumlah perokok mengalami peningkatan setiap tahunnya. Berdasarkan Riset Kesehatan Dasar (Riskesdas) 2013, ada sekitar 58 juta perokok aktif dimulai dari usia 10 tahun ke atas. \n \n
        Padahal, bahaya merokok mengintai di depan mata. Mulai dari penyakit paru obstruktif kronis, kanker paru-paru, serangan jantung, dan masih banyak lagi. \n \n
        Dengan sederet bahaya, ada baiknya jika Anda mencoba untuk berhenti merokok meski prosesnya tak mudah.
        Berhenti merokok memang bukan hal mudah. \n \n Ada sederet dampak yang bisa dirasakan tubuh saat merespons rencana berhenti merokok yang tengah Anda lakoni.
        Beberapa pekan pertama biasanya menjadi periode yang sulit. Tubuh akan mengalami proses regeneratif. \n \n Dibutuhkan beberapa bulan hingga akhirnya seseorang terbebas dari candu rokok dan menjadi mantan perokok.
        Berikut timeline apa yang bakal terjadi pada tubuh saat ada berhenti merokok, mengutip Healthline dan Medical News Today. \n \n
        20 menit setelah rokok terakhir Dampak positif dari berhenti merokok dimulai sejak 20 menit setelah rokok terakhir. Tekanan darah dan denyut nadi Anda akan kembali pada level normal.
    </string>
    <string name="metode"><font color='#827D85'>Metode</font> : <font color='#827D85'><b>Mengurangi Intensitas</b></font> </string>

    <string name="metode2"><font color='#827D85'>Metode</font> : <font color='#827D85'><b>Langsung Berhenti</b></font> </string>
    <string name="start"><font color='#916DD5'>Start</font> : <font color='#916DD5'><b>8 Des 2022</b></font> </string>
    <string name="end"><font color='#916DD5'>End</font> : <font color='#916DD5'><b>6 Feb 2023</b></font> </string>

    <string name="start2"><font color='#916DD5'>Start</font> : <font color='#916DD5'><b>1 Des 2022</b></font> </string>
    <string name="end2"><font color='#916DD5'>End</font> : <font color='#916DD5'><b>31 Des 2022</b></font> </string>

    <string name="end3"><font color='#916DD5'>End</font> : <font color='#916DD5'><b>Dijeda</b></font> </string>

    <string name="start3"><font color='#827D85'>Start</font> : <font color='#827D85'><b>1 Des 2022</b></font> </string>
    <string name="end4"><font color='#827D85'>End</font> : <font color='#827D85'><b>Dijeda</b></font> </string>

    <string name="start4"><font color='#916DD5'>Start</font> : <font color='#916DD5'><b>1 Des 2022</b></font> </string>
    <string name="end5"><font color='#916DD5'>End</font> : <font color='#916DD5'><b>13 Feb 2023</b></font> </string>

    <string-array name="jenis_adiksi">
        <item>Alkohol</item>
        <item>Game</item>
        <item>Rokok</item>
        <item>Gula</item>
        <item>Snack</item>
        <item>Pornografi(PMO)</item>
        <item>Obat-obatan</item>
        <item>Media Sosial</item>
    </string-array>

    <string name="berhenti_pmo">Jauhi semua hal yang membuat nafsumu terpicu, Contohnya stop menonton konten di Instagram/Tiktok yang menampilkan gambar-gambar cewek joget-joget dengan pakaian minim. Bila perlu uninstall saja aplikasi tersebut jika dirasa tidak ada tontonan berjenis lain yang kamu lihat pada aplikasi tersebut, dan juga UNINSTALL VPNMU!!</string>
    <string name="berhenti_merokok">Belilah permen untuk menggantikan rokok jikalau dirimu merasa mulutmu sedang dalam kondisi masam, atau inhaler jika merasa butuh sesuatu yang bisa menyejukkan tenggorokanmu. Jauhi tongkronganmu yang sering menjebakmu untuk merokok jika mentalmu tidak kuat menghadapi godaan dari mereka!</string>
    <string name="berhenti_alkohol">Temukan minuman favorit baru yang dapat menggantikan rasa dari alkohol seperti minum jus buah yang tentu saja lebih baik untuk kesehatan. Lakukan hobimu untuk menggantikan perasaan kekurangan ketika tidak mengonsumsi alkohol. Jauhi tongkronganmu yang sering menjebakmu untuk minum alkohol jika mentalmu tidak kuat menghadapi godaan dari mereka!</string>
    <string name="berhenti_media_sosial">Sadari aktivitasmu setiap harinya baik yang secara habitual dan impulsif maupun yang sudah dipikirkan sebelumnya. Ketika merasa bosan jangan langsung membuka Sosial Media, coba tahan dirimu dari kebiasaan untuk membuka dan scroll sosmed setiap saat. Lakukan aktivitas seperti membersihkan rumah, merapihkan kamar, mencuci piring yang dapat menggantikan kebosananmu ketika tidak mengonsumsi sosmed. Bila perlu, kamu dapat menguninstall semua aplikasi sosmed yang sekiranya tidak penting atau memberi peraturan pada dirimu untuk hanya boleh membukanya dari laptop saja hanya selama beberapa menit. Jika masih susah untuk berhenti, kamu dapat mencoba cara menonaktifkan akun sosmedmu atau bahkan menghapusnya.</string>
    <string name="title_activity_profil_pencapaian">Profil_Pencapaian_Activity</string>
</resources>