<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_latar"
    tools:context=".detail_plan2_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="8dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_kembali"
                android:layout_gravity="center"
                android:layout_marginStart="27dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Detail plan"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/poppinsbold"
                android:textColor="@color/ungu"
                android:textSize="16sp"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="217dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="217dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tobat dari minuman keras"
                    android:fontFamily="@font/poppinsbold"
                    android:textSize="18sp"
                    android:textColor="@color/biru"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/metode2"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppinsbold"
                    android:text="Target"
                    android:textColor="@color/silver"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/poppinsregular"
                    android:text="  Berhenti total konsumsi miras"
                    android:textColor="@color/silver"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppinsbold"
                    android:text="Note :"
                    android:textColor="@color/silver"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/poppinsregular"
                    android:text="  TOBAT KAWAN TOBATTT !! INGET KESEHATAN JUGA"
                    android:textColor="@color/silver"
                    android:textSize="12sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="244dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="244dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="227dp"
                    android:layout_height="wrap_content"
                    android:text="Target Mingguanmu Tidak Terpenuhi dan Nyawa mu habis! Ayo Lakukan Punishment!"
                    android:layout_marginTop="20dp"
                    android:textSize="12sp"
                    android:textColor="@color/silver"
                    android:gravity="center"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Status Nyawa"
                    android:fontFamily="@font/poppinsbold"
                    android:textSize="14sp"
                    android:textColor="@color/biru"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/heart_abu"
                        android:layout_marginStart="109dp" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/heart_abu"
                        android:layout_marginStart="12sp" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/heart_abu"
                        android:layout_marginStart="12sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/bt_isinyawa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/silver"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:text="Isi ulang nyawa"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="371dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Progress"
                    android:fontFamily="@font/poppinsbold"
                    android:textSize="14sp"
                    android:textColor="@color/biru"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/start2"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="121dp"
                        android:text="@string/end3"
                        android:textSize="12sp" />

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/progress_bar" />

                <CalendarView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>



</ScrollView>